spacing fixes
spacing within routes line up and slide effect is reimplemented in nav bar

--- a/client/src/components/Account/Account.css
+++ b/client/src/components/Account/Account.css
@@ -4,7 +4,7 @@
   /* display: flex;
   align-items: center;
   align-content: center; */
-  margin-top: 50px;
+  /* margin-top: 50px; */
   text-align: center;
 }
 .formPaper {
