--- a/client/src/components/Archived/Archived.css
+++ b/client/src/components/Archived/Archived.css
@@ -6,18 +6,18 @@
   text-align: center;
 }
 
-.mainTripList {
+/* .mainTripList {
   margin-top: 47px;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
-}
+} */
 
 .trip2 {
   width: 280px;
   height: 270px;
-  padding: 5%;
+  /* padding: 5%; */
   margin: 15px 15px 15px 15px;
   display: flex;
   flex-direction: column;
