--- a/client/src/components/TripList/TripList.css
+++ b/client/src/components/TripList/TripList.css
@@ -1,20 +1,26 @@
 .trip {
   width: 280px;
   height: 270px;
-  margin: 15px 15px 15px 15px;
+  margin: 0px 15px 15px 0px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 1%;
+  /* padding: 1%; */
 }
-
 .mainTripList {
+  /* margin-top: 47px; */
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+/* .mainTripList {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
   align-content: flex-start;
   margin: auto;
-}
+} */
 .mapsIcon {
   max-width: 100%;
   margin: auto;
